# rust-tms

./: .env.example  Cargo.toml  README.md
.github/workflows/: master.yml
migrations/: 20240517012402_init.sql
src/: application.rs  lib.rs  main.rs  models.rs
src/application/: auth.rs  routes.rs  utils.rs
src/application/models/: customer_dto.rs  mod.rs
src/application/routes/: authorized.rs  customers.rs  forbidden.rs  index.rs  login.rs  logout.rs  me.rs  protected.rs  vendors.rs
src/application/utils/: app_state.rs  http_utils.rs  mod.rs
src/domain/: aggregates.rs
src/domain/aggregates/: customer.rs  vendor.rs
src/domain/repositories/: customer_repository.rs
src/infrastructure/: queries.rs  repositories.rs
src/infrastructure/queries/: customer_queries.rs  vendor_queries.rs
src/infrastructure/repositories/: customer_repository.rs  vendor_repository.rs
src/models/: customer_dto.rs  user.rs  user_dto.rs  vendor_dto.rs
src/routes/: authorized.rs  index.rs  login.rs  logout.rs  mod.rs  protected.rs
