[package]
name = "tsm"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"

axum = "0.7"
axum-extra = { version = "0.9", features = ["typed-header"] }

chrono = "0.4"

dotenvy = "0.15"
http = "1.1"
jsonwebtoken = "9.3"

listenfd = "1.0"
readonly = "0.2"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = [ "runtime-tokio", "postgres", "chrono" ] }
tokio = { version = "1.37", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }

tracing = "0.1"
tracing-subscriber = "0.3"
url = "2.5"
validator = { version = "0.18", features = ["derive"] }
